@@ -3,6 +3,7 @@ $Id$
 2014-06-30  Christian Franke  <franke@computer.org>
 
 	configure.ac: Update macros as suggested by 'autoconf --warnings=obsolete'.
+	Makefile.am: Add creation of empty directories to install targets.
 
 2014-06-29  Christian Franke  <franke@computer.org>
 
